# bb84-decoy-states

./: .gitignore  bb88_simulator.py  channelAnalysis.py  classicalChannel.py  data.py  data_04_09_2026_50.csv  detector.py  distanceAnalysis.py  distanceSweep.py  emitter.py  main.py  plot_R.py  postProcess.py  pyproject.toml  quantumChannel.py  receiver.py  run_simulation.py  securityAnalysis.py  simulator.py  source.py
data/: data_04_09_2026_30.csv  data_04_10_2026_75_30M.csv  data_20260410_124020_100_1000000.csv
docs/source/: bb88_simulator.rst  conf.py  detector.rst  index.rst  modules.rst  plot_R.rst  postProcess.rst  source.rst  theory.rst
